<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wp">
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/app_bar3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/locRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar3"
            android:layout_marginStart="5dp"
            android:text="sssss"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/app_bar3"
            android:layout_marginEnd="5dp"
            android:inputType="date" />



        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView1"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_toEndOf="@id/imageView1"
        android:id="@+id/titleRP" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/descRP" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descRP"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/tagRP" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView1"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="50dp"
        android:layout_toEndOf="@id/imageView1"
        android:layout_marginStart="19dp"
        android:id="@+id/authorRP" />


    <ImageButton
        android:id="@+id/imgLike"
        android:contentDescription="@string/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView1"
        android:layout_below="@id/tagRP"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <ImageButton
        android:contentDescription="@string/dislike"
        android:id="@+id/imgDislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgLike"
        android:layout_toRightOf="@id/imgLike"
        android:layout_marginStart="173dp" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dislikes"
        android:layout_toRightOf="@id/imgLike" />

    <TextView
        android:id="@+id/dislikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgDislike"
        android:layout_toRightOf="@id/imgDislike"
        android:layout_marginBottom="11dp" />

    </RelativeLayout>


</FrameLayout>